--- a/familytree.html
+++ b/familytree.html
@@ -8,6 +8,15 @@
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+
+	<!-- NEW ADDED LINKS FOR AR-->
+	<!-- include A-Frame -->
+	<script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+	<!-- include ar.js for A-Frame -->
+	<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.2/aframe/build/aframe-ar.js"></script>
+	<!-- include gesture.js for 3D model interactivity -->
+	<script src="https://raw.githack.com/fcor/arjs-gestures/master/dist/gestures.js"></script>
+
 	<style>
 	body {
   background-image: url('backgroundImage.jpg');
@@ -27,7 +36,7 @@
 	<div class="title">
 		<h3>FREDRICKS FAMILY TREE</h3>
 	</div>
-	<div class="body genealogy-body genealogy-scroll">
+	<!-- <div class="body genealogy-body genealogy-scroll"></div>
 		<div class="genealogy-tree">
 			<ul>
 				<li>
@@ -157,7 +166,7 @@
 				</li>
 			</ul>
 		</div>
-	</div>
+	</div> 
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js">
 	</script>
 
@@ -185,6 +194,22 @@
 	       e.stopPropagation();
 	   });
 	});
-	</script>
+	</script> -->
+
+	<!-- AR 3D Model-->
+	<a-scene embedded arjs='debugUIEnabled: false; sourceType: webcam' vr-mode-ui='enabled: false' gesture-detector>
+		<!--Plane for Family Tree image and text -->
+		<a-entity
+			rotation="-90 0 0"
+			geometry="primitive: plane; width: 4; height: auto"
+			material="color: yellow"
+			text="value: insert text here"
+			class="clickable"
+			gesture-handler>
+		</a-entity>
+		<a-image src="(insert image here)" rotation="-90 0 0"></a-image>
+		<a-marker-camera preset='hiro'></a-marker-camera>
+	</a-scene>
+
 </body>
 </html>
